--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.10",
     "gulp-clean": "^0.3.1",
+    "gulp-jade": "",
     "gulp-less": "",
-    "less-plugin-clean-css": "^1.5.0"
+    "less-plugin-clean-css": "^1.5.0",
+    "del": ""
   },
   "devDependencies": {
     "LiveScript": ""
